seperate ad9371 relation KO. you must use the newest rootfs.

--- a/arch/arm/configs/a10ad9371facc_defconfig
+++ b/arch/arm/configs/a10ad9371facc_defconfig
@@ -129,32 +129,38 @@ CONFIG_RTC_CLASS=y
 # CONFIG_RTC_HCTOSYS is not set
 CONFIG_RTC_DRV_DS1307=y
 CONFIG_DMADEVICES=y
-CONFIG_AXI_DMAC=y
+CONFIG_DMA_VIRTUAL_CHANNELS=m
+CONFIG_AXI_DMAC=m
 CONFIG_PL330_DMA=y
 CONFIG_DMATEST=m
 CONFIG_COMMON_CLK_SI5338=m
 CONFIG_COMMON_CLK_SI5338SIMPLE=y
-CONFIG_COMMON_CLK_ALTERA_A10_FPLL=y
+CONFIG_COMMON_CLK_ALTERA_A10_FPLL=m
 CONFIG_IIO=y
+CONFIG_IIO_BUFFER=y
+CONFIG_IIO_BUFFER_DMA=y
+CONFIG_IIO_BUFFER_DMAENGINE=y
+CONFIG_IIO_HW_CONSUMER=y
 CONFIG_IIO_TRIGGER=y
 CONFIG_AD7291=y
-CONFIG_AD9361=y
-CONFIG_AD9371=y
-CONFIG_AD9467=y
-CONFIG_AD9680=y
-CONFIG_ADMC=y
+CONFIG_CF_AXI_ADC=m
+CONFIG_AD9361=m
+CONFIG_AD9371=m
+CONFIG_AD9467=m
+CONFIG_AD9680=m
+CONFIG_ADMC=m
 CONFIG_ALTERA_XCVR=y
 CONFIG_AD9523=y
-CONFIG_AD9528=y
+CONFIG_AD9528=m
 CONFIG_AD9548=y
-CONFIG_CF_AXI_DDS=y
-CONFIG_CF_AXI_DDS_AD9144=y
+CONFIG_CF_AXI_DDS=m
+CONFIG_CF_AXI_DDS_AD9144=m
 CONFIG_JESD204=y
-CONFIG_ALTERA_ARRIA10_JESD204_PHY=y
+CONFIG_ALTERA_ARRIA10_JESD204_PHY=m
 CONFIG_AXI_ADXCVR=y
 CONFIG_AXI_JESD204B=y
-CONFIG_AXI_JESD204_TX=y
-CONFIG_AXI_JESD204_RX=y
+CONFIG_AXI_JESD204_TX=m
+CONFIG_AXI_JESD204_RX=m
 CONFIG_FPGA=y
 CONFIG_FPGA_REGION=y
 CONFIG_FPGA_MGR_SOCFPGA=y
