--- a/arch/arm/boot/dts/a10ad9371facc_dma_ad9371n2.dtsi
+++ b/arch/arm/boot/dts/a10ad9371facc_dma_ad9371n2.dtsi
@@ -1,13 +1,13 @@
 
 &sys_hps_bridges {
-	n2_axi_ad9371_tx_jesd: axi-jesd204-tx@80000 {
+	axi_ad9371_tx_jesd_n2: axi-jesd204-tx-n2@80000 {
 		compatible = "adi,axi-jesd204-tx-1.0";
 		reg = <0x00080000 0x4000>;
 
 		interrupt-parent = <&intc>;
 		interrupts = <0 20 IRQ_TYPE_NONE>;
 
-		clocks = <&sys_clk>, <&n2_tx_device_clk_pll>, <&n2_axi_ad9371_tx_xcvr>;
+		clocks = <&sys_clk>, <&tx_device_clk_pll_n2>, <&axi_ad9371_tx_xcvr_n2>;
 		clock-names = "s_axi_aclk", "device_clk", "lane_clk";
 
 		adi,octets-per-frame = <2>;
@@ -18,17 +18,17 @@
 		adi,control-bits-per-sample = <2>;
 
 		#clock-cells = <0>;
-		clock-output-names = "n2_jesd_tx_lane_clk";
+		clock-output-names = "jesd_tx_lane_clk_n2";
 	};
 
-	n2_axi_ad9371_rx_jesd: axi-jesd204-rx@90000 {
+	axi_ad9371_rx_jesd_n2: axi-jesd204-rx-n2@90000 {
 		compatible = "adi,axi-jesd204-rx-1.0";
 		reg = <0x00090000 0x4000>;
 
 		interrupt-parent = <&intc>;
 		interrupts = <0 21 IRQ_TYPE_NONE>;
 
-		clocks = <&sys_clk>, <&n2_rx_device_clk_pll>, <&n2_axi_ad9371_rx_xcvr>;
+		clocks = <&sys_clk>, <&rx_device_clk_pll_n2>, <&axi_ad9371_rx_xcvr_n2>;
 		clock-names = "s_axi_aclk", "device_clk", "lane_clk";
 
 		adi,octets-per-frame = <4>;
@@ -38,17 +38,17 @@
 		adi,converters-per-device = <4>;
 
 		#clock-cells = <0>;
-		clock-output-names = "n2_jesd_rx_lane_clk";
+		clock-output-names = "jesd_rx_lane_clk_n2";
 	};
 
-	n2_axi_ad9371_rx_os_jesd: axi-jesd204-rx@a0000 {
+	axi_ad9371_rx_os_jesd_n2: axi-jesd204-rx-n2@a0000 {
 		compatible = "adi,axi-jesd204-rx-1.0";
 		reg = <0x000a0000 0x4000>;
 
 		interrupt-parent = <&intc>;
 		interrupts = <0 22 IRQ_TYPE_NONE>;
 
-		clocks = <&sys_clk>, <&n2_rx_os_device_clk_pll>, <&n2_axi_ad9371_rx_os_xcvr>;
+		clocks = <&sys_clk>, <&rx_os_device_clk_pll_n2>, <&axi_ad9371_rx_os_xcvr_n2>;
 		clock-names = "s_axi_aclk", "device_clk", "lane_clk";
 
 		adi,octets-per-frame = <2>;
@@ -58,10 +58,10 @@
 		adi,converters-per-device = <4>;
 
 		#clock-cells = <0>;
-		clock-output-names = "n2_jesd_rx_os_lane_clk";
+		clock-output-names = "jesd_rx_os_lane_clk_n2";
 	};
 
-	 n2_axi_ad9371_tx_xcvr: axi-ad9371-tx-xcvr@84000 {
+	 axi_ad9371_tx_xcvr_n2: axi-ad9371-tx-xcvr-n2@84000 {
 		compatible = "adi,altera-adxcvr-1.00.a";
 		reg = <0x00084000 0x00001000>,
 			<0x00086000 0x00001000>,
@@ -71,42 +71,42 @@
 			<0x0008b000 0x00001000>;
 		reg-names = "adxcvr", "atx-pll", "adxcfg-0", "adxcfg-1", "adxcfg-2", "adxcfg-3";
 
-		clocks = <&clk0_ad9528 3>, <&n2_tx_device_clk_pll>;
+		clocks = <&clk0_ad9528 3>, <&tx_device_clk_pll_n2>;
 		clock-names = "ref", "link";
 
 		#clock-cells = <0>;
-		clock-output-names = "n2_jesd204_tx_lane_clock";
+		clock-output-names = "jesd204_tx_lane_clock_n2";
 	};
 
-	n2_axi_ad9371_rx_xcvr: axi-ad9371-rx-xcvr@94000 {
+	axi_ad9371_rx_xcvr_n2: axi-ad9371-rx-xcvr-n2@94000 {
 		compatible = "adi,altera-adxcvr-1.00.a";
 		reg = <0x00094000 0x00001000>,
 			<0x00098000 0x00001000>,
 			<0x00099000 0x00001000>;
 		reg-names = "adxcvr", "adxcfg-0", "adxcfg-1";
 
-		clocks = <&clk0_ad9528 3>, <&n2_rx_device_clk_pll>;
+		clocks = <&clk0_ad9528 3>, <&rx_device_clk_pll_n2>;
 		clock-names = "ref", "link";
 
 		#clock-cells = <0>;
-		clock-output-names = "n2_jesd204_rx_lane_clock";
+		clock-output-names = "jesd204_rx_lane_clock_n2";
 	};
 
-	n2_axi_ad9371_rx_os_xcvr: axi-ad9371-rx-os-xcvr@a4000 {
+	axi_ad9371_rx_os_xcvr_n2: axi-ad9371-rx-os-xcvr-n2@a4000 {
 		compatible = "adi,altera-adxcvr-1.00.a";
 		reg = <0x000a4000 0x00001000>,
 			<0x000a8000 0x00001000>,
 			<0x000a9000 0x00001000>;
 		reg-names = "adxcvr", "adxcfg-0", "adxcfg-1";
 
-		clocks = <&clk0_ad9528 3>, <&n2_rx_os_device_clk_pll>;
+		clocks = <&clk0_ad9528 3>, <&rx_os_device_clk_pll_n2>;
 		clock-names = "ref", "link";
 
 		#clock-cells = <0>;
-		clock-output-names = "n2_jesd204_rx_os_lane_clock";
+		clock-output-names = "jesd204_rx_os_lane_clock_n2";
 	};
 
-	n2_axi_ad9371_tx_dma: axi-ad9371-tx-dma@8c000 {
+	axi_ad9371_tx_dma_n2: axi-ad9371-tx-dma-n2@8c000 {
 		compatible = "adi,axi-dmac-1.00.a";
 		reg = <0x0008c000 0x00004000>;
 		interrupt-parent = <&intc>;
@@ -118,10 +118,11 @@
 			adi,source-bus-width = <128>;
 			adi,destination-bus-width = <128>;
 			adi,type = <1>;
+			//adi,cyclic;
 		};
 	};
 
-	n2_axi_ad9371_rx_dma: axi-ad9371-rx-dma@9c000 {
+	axi_ad9371_rx_dma_n2: axi-ad9371-rx-dma-n2@9c000 {
 		compatible = "adi,axi-dmac-1.00.a";
 		reg = <0x0009c000 0x00004000>;
 		interrupt-parent = <&intc>;
@@ -136,7 +137,7 @@
 		};
 	};
 
-	n2_axi_ad9371_rx_os_dma: axi-ad9371-rx-os-dma@ac000 {
+	axi_ad9371_rx_os_dma_n2: axi-ad9371-rx-os-dma-n2@ac000 {
 		compatible = "adi,axi-dmac-1.00.a";
 		reg = <0x000ac000 0x00004000>;
 		interrupt-parent = <&intc>;
@@ -151,62 +152,63 @@
 		};
 	};
 
-	n2_axi_ad9371_rx: axi-ad9371-rx-hpc@b0000 {
+	axi_ad9371_rx_n2: axi-ad9371-rx-hpc-n2@b0000 {
 		compatible = "adi,axi-ad9371-rx-1.0";
 		reg = <0x000b0000 0x00008000>;
-		dmas = <&n2_axi_ad9371_rx_dma 0>;
+		dmas = <&axi_ad9371_rx_dma_n2 0>;
 		dma-names = "rx";
-		spibus-connected = <&n2_trx0_ad9371>;
+		spibus-connected = <&trx0_ad9371_n2>;
 	};
 
-	n2_axi_ad9371_tx: axi-ad9371-tx-hpc@54000 {
+	axi_ad9371_tx_n2: axi-ad9371-tx-hpc-n2@b4000 {
 		compatible = "adi,axi-ad9371-tx-1.0";
 		reg = <0x000b4000 0x00004000>;
-		dmas = <&n2_axi_ad9371_tx_dma 0>;
+		dmas = <&axi_ad9371_tx_dma_n2 0>;
 		dma-names = "tx";
-		clocks = <&n2_trx0_ad9371 2>;
+		clocks = <&trx0_ad9371_n2 2>;
 		clock-names = "sampl_clk";
-		spibus-connected = <&n2_trx0_ad9371>;
+		spibus-connected = <&trx0_ad9371_n2>;
 		adi,axi-pl-fifo-enable;/* RxDMA fifo mode */
+		//adi,axi-pl-fifo-disable;
 	};
 
-	n2_xcvr_rx_os_core: axi-ad9371-rx-obs-hpc@58000 {
+	xcvr_rx_os_core_n2: axi-ad9371-rx-obs-hpc-n2@b8000 {
 		compatible = "adi,axi-ad9371-obs-1.0";
 		reg = <0x000b8000 0x00001000>;
-		dmas = <&n2_axi_ad9371_rx_os_dma 0>;
+		dmas = <&axi_ad9371_rx_os_dma_n2 0>;
 		dma-names = "rx";
-		clocks = <&n2_trx0_ad9371 1>;
+		clocks = <&trx0_ad9371_n2 1>;
 		clock-names = "sampl_clk";
 	};
 
-	n2_tx_device_clk_pll: altera-a10-fpll@85000 {
+	tx_device_clk_pll_n2: a10-fpll-tx-n2@85000 {
 		compatible = "altr,a10-fpll";
 		reg = <0x00085000 0x1000>;
 		clocks = <&clk0_ad9528 3>;
 
 		#clock-cells = <0>;
-		clock-output-names = "n2_jesd204_tx_link_clock";
+		clock-output-names = "jesd204_tx_link_clock_n2";
 	};
 
-	n2_rx_device_clk_pll: altera-a10-fpll@95000 {
+	rx_device_clk_pll_n2: a10-fpll-rx-n2@95000 {
 		compatible = "altr,a10-fpll";
 		reg = <0x00095000 0x1000>;
 		clocks = <&clk0_ad9528 3>;
 
 		#clock-cells = <0>;
-		clock-output-names = "n2_jesd204_rx_link_clock";
+		clock-output-names = "jesd204_rx_link_clock_n2";
 	};
 
-	n2_rx_os_device_clk_pll: altera-a10-fpll@a5000 {
+	rx_os_device_clk_pll_n2: a10-fpll-rx-os-n2@a5000 {
 		compatible = "altr,a10-fpll";
 		reg = <0x000a5000 0x1000>;
 		clocks = <&clk0_ad9528 3>;
 
 		#clock-cells = <0>;
-		clock-output-names = "n2_jesd204_rx_os_link_clock";
+		clock-output-names = "jesd204_rx_os_link_clock_n2";
 	};
 
-	n2_fmc_spi: spi@60040 {
+	fmc_spi_n2: spi@60040 {
 		compatible = "altr,spi-1.0";
 		reg = <0x00060040 0x00000020>;
 		interrupt-parent = <&intc>;
@@ -216,8 +218,8 @@
 	};
 };
 
-&n2_fmc_spi {
-	n2_trx0_ad9371: ad9371-phy-n2@1 {
+&fmc_spi_n2 {
+	trx0_ad9371_n2: ad9371-phy-n2@1 {
 		#address-cells = <1>;
 		#size-cells = <0>;
 		#clock-cells = <1>;
@@ -240,9 +242,9 @@
 		//interrupts = <0 39 IRQ_TYPE_LEVEL_HIGH>;
 
 		/* Clocks */
-		clocks = <&n2_axi_ad9371_rx_jesd>, <&n2_axi_ad9371_tx_jesd>, <&n2_axi_ad9371_rx_os_jesd>, <&clk0_ad9528 1>, <&clk0_ad9528 3>;
+		clocks = <&axi_ad9371_rx_jesd_n2>, <&axi_ad9371_tx_jesd_n2>, <&axi_ad9371_rx_os_jesd_n2>, <&clk0_ad9528 1>, <&clk0_ad9528 3>;
 		clock-names = "jesd_rx_clk", "jesd_tx_clk", "jesd_rx_os_clk", "dev_clk", "fmc_clk";
-		clock-output-names = "n2_rx_sampl_clk", "n2_rx_os_sampl_clk", "n2_tx_sampl_clk";
+		clock-output-names = "rx_sampl_clk_n2", "rx_os_sampl_clk_n2", "tx_sampl_clk_n2";
 
 		adi,clocks-clk-pll-vco-freq_khz = <9830400>;
 		adi,clocks-device-clock_khz = <122880>;
@@ -288,5 +290,29 @@
 		adi,sniffer-profile-rx-bbf-3db-corner_khz = <100000>;
 		adi,sniffer-profile-rx-dec5-decimation = <5>;
 		adi,sniffer-profile-rx-fir-decimation = <4>;
+#if 0
+		/* Jacky:2018/07/25: enable pin-mode 
+		   https://wiki.analog.com/resources/tools-software/linux-drivers/iio-transceiver/ad9371-customization */
+		adi,arm-gpio-use-rx2-enable-pin = <1>;	// 0= RX1_ENABLE controls RX1&RX2, 1= separate RX1/RX2_ENABLE pins
+		adi,arm-gpio-use-tx2-enable-pin = <1>;	// 0= TX1_ENABLE controls TX1&TX2, 1= separate TX1/TX2_ENABLE pins
+		adi,arm-gpio-tx-rx-pin-mode = <1>;		// 0= ARM command mode, 1 = Pin mode to power up Tx/Rx chains
+		adi,arm-gpio-orx-pin-mode = <1>;		// 0= ARM command mode, 1 = Pin mode to power up ObsRx receiver
+		// to be tested: enable pin-mode but NOT enable gpio-ack
+		adi,arm-gpio-orx-trigger-pin = <0>;		// Select desired GPIO pin (valid 4-15)
+		adi,arm-gpio-orx-mode2-pin = <0>;		// Select desired GPIO pin (valid 0-18)
+		adi,arm-gpio-orx-mode1-pin = <0>;		// Select desired GPIO pin (valid 0-18)
+		adi,arm-gpio-orx-mode0-pin = <0>;		// Select desired GPIO pin (valid 0-18)
+		adi,arm-gpio-rx1-enable-ack = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-rx2-enable-ack = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-tx1-enable-ack = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-tx2-enable-ack = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-orx1-enable-ack = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-orx2-enable-ack = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-srx-enable-ack = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-tx-obs-select = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable.
+			// When 2 Tx are used with only 1 ORx input, this GPIO tells BBIC which Tx channel is active
+			// for calibrations, so BBIC can route correct RF Tx path into the single ORx input
+		adi,arm-gpio-enable-mask = <0>;
+#endif
 	};
 };
