--- a/arch/arm/boot/dts/a10ad9371facc_dma_ad9371n4.dtsi
+++ b/arch/arm/boot/dts/a10ad9371facc_dma_ad9371n4.dtsi
@@ -1,13 +1,13 @@
 
 &sys_hps_bridges {
-	n4_axi_ad9371_tx_jesd: axi-jesd204-tx@140000 {
+	axi_ad9371_tx_jesd_n4: axi-jesd204-tx-n4@140000 {
 		compatible = "adi,axi-jesd204-tx-1.0";
 		reg = <0x00140000 0x4000>;
 
 		interrupt-parent = <&intc>;
 		interrupts = <0 33 IRQ_TYPE_NONE>;
 
-		clocks = <&sys_clk>, <&n4_tx_device_clk_pll>, <&n4_axi_ad9371_tx_xcvr>;
+		clocks = <&sys_clk>, <&tx_device_clk_pll_n4>, <&axi_ad9371_tx_xcvr_n4>;
 		clock-names = "s_axi_aclk", "device_clk", "lane_clk";
 
 		adi,octets-per-frame = <2>;
@@ -18,17 +18,17 @@
 		adi,control-bits-per-sample = <2>;
 
 		#clock-cells = <0>;
-		clock-output-names = "n4_jesd_tx_lane_clk";
+		clock-output-names = "jesd_tx_lane_clk_n4";
 	};
 
-	n4_axi_ad9371_rx_jesd: axi-jesd204-rx@150000 {
+	axi_ad9371_rx_jesd_n4: axi-jesd204-rx-n4@150000 {
 		compatible = "adi,axi-jesd204-rx-1.0";
 		reg = <0x00150000 0x4000>;
 
 		interrupt-parent = <&intc>;
 		interrupts = <0 34 IRQ_TYPE_NONE>;
 
-		clocks = <&sys_clk>, <&n4_rx_device_clk_pll>, <&n4_axi_ad9371_rx_xcvr>;
+		clocks = <&sys_clk>, <&rx_device_clk_pll_n4>, <&axi_ad9371_rx_xcvr_n4>;
 		clock-names = "s_axi_aclk", "device_clk", "lane_clk";
 
 		adi,octets-per-frame = <4>;
@@ -38,17 +38,17 @@
 		adi,converters-per-device = <4>;
 
 		#clock-cells = <0>;
-		clock-output-names = "n4_jesd_rx_lane_clk";
+		clock-output-names = "jesd_rx_lane_clk_n4";
 	};
 
-	n4_axi_ad9371_rx_os_jesd: axi-jesd204-rx@160000 {
+	axi_ad9371_rx_os_jesd_n4: axi-jesd204-rx-n4@160000 {
 		compatible = "adi,axi-jesd204-rx-1.0";
 		reg = <0x00160000 0x4000>;
 
 		interrupt-parent = <&intc>;
 		interrupts = <0 50 IRQ_TYPE_NONE>;
 
-		clocks = <&sys_clk>, <&n4_rx_os_device_clk_pll>, <&n4_axi_ad9371_rx_os_xcvr>;
+		clocks = <&sys_clk>, <&rx_os_device_clk_pll_n4>, <&axi_ad9371_rx_os_xcvr_n4>;
 		clock-names = "s_axi_aclk", "device_clk", "lane_clk";
 
 		adi,octets-per-frame = <2>;
@@ -58,10 +58,10 @@
 		adi,converters-per-device = <4>;
 
 		#clock-cells = <0>;
-		clock-output-names = "n4_jesd_rx_os_lane_clk";
+		clock-output-names = "jesd_rx_os_lane_clk_n4";
 	};
 
-	 n4_axi_ad9371_tx_xcvr: axi-ad9371-tx-xcvr@144000 {
+	 axi_ad9371_tx_xcvr_n4: axi-ad9371-tx-xcvr-n4@144000 {
 		compatible = "adi,altera-adxcvr-1.00.a";
 		reg = <0x00144000 0x00001000>,
 			<0x00146000 0x00001000>,
@@ -71,42 +71,42 @@
 			<0x0014b000 0x00001000>;
 		reg-names = "adxcvr", "atx-pll", "adxcfg-0", "adxcfg-1", "adxcfg-2", "adxcfg-3";
 
-		clocks = <&clk0_ad9528 11>, <&n4_tx_device_clk_pll>;
+		clocks = <&clk0_ad9528 11>, <&tx_device_clk_pll_n4>;
 		clock-names = "ref", "link";
 
 		#clock-cells = <0>;
-		clock-output-names = "n4_jesd204_tx_lane_clock";
+		clock-output-names = "jesd204_tx_lane_clock_n4";
 	};
 
-	n4_axi_ad9371_rx_xcvr: axi-ad9371-rx-xcvr@154000 {
+	axi_ad9371_rx_xcvr_n4: axi-ad9371-rx-xcvr-n4@154000 {
 		compatible = "adi,altera-adxcvr-1.00.a";
 		reg = <0x00154000 0x00001000>,
 			<0x00158000 0x00001000>,
 			<0x00159000 0x00001000>;
 		reg-names = "adxcvr", "adxcfg-0", "adxcfg-1";
 
-		clocks = <&clk0_ad9528 11>, <&n4_rx_device_clk_pll>;
+		clocks = <&clk0_ad9528 11>, <&rx_device_clk_pll_n4>;
 		clock-names = "ref", "link";
 
 		#clock-cells = <0>;
-		clock-output-names = "n4_jesd204_rx_lane_clock";
+		clock-output-names = "jesd204_rx_lane_clock_n4";
 	};
 
-	n4_axi_ad9371_rx_os_xcvr: axi-ad9371-rx-os-xcvr@164000 {
+	axi_ad9371_rx_os_xcvr_n4: axi-ad9371-rx-os-xcvr-n4@164000 {
 		compatible = "adi,altera-adxcvr-1.00.a";
 		reg = <0x00164000 0x00001000>,
 			<0x00168000 0x00001000>,
 			<0x00169000 0x00001000>;
 		reg-names = "adxcvr", "adxcfg-0", "adxcfg-1";
 
-		clocks = <&clk0_ad9528 11>, <&n4_rx_os_device_clk_pll>;
+		clocks = <&clk0_ad9528 11>, <&rx_os_device_clk_pll_n4>;
 		clock-names = "ref", "link";
 
 		#clock-cells = <0>;
-		clock-output-names = "n4_jesd204_rx_os_lane_clock";
+		clock-output-names = "jesd204_rx_os_lane_clock_n4";
 	};
 
-	n4_axi_ad9371_tx_dma: axi-ad9371-tx-dma@14c000 {
+	axi_ad9371_tx_dma_n4: axi-ad9371-tx-dma-n4@14c000 {
 		compatible = "adi,axi-dmac-1.00.a";
 		reg = <0x0014c000 0x00004000>;
 		interrupt-parent = <&intc>;
@@ -118,10 +118,11 @@
 			adi,source-bus-width = <128>;
 			adi,destination-bus-width = <128>;
 			adi,type = <1>;
+			adi,cyclic;
 		};
 	};
 
-	n4_axi_ad9371_rx_dma: axi-ad9371-rx-dma@15c000 {
+	axi_ad9371_rx_dma_n4: axi-ad9371-rx-dma-n4@15c000 {
 		compatible = "adi,axi-dmac-1.00.a";
 		reg = <0x0015c000 0x00004000>;
 		interrupt-parent = <&intc>;
@@ -136,7 +137,7 @@
 		};
 	};
 
-	n4_axi_ad9371_rx_os_dma: axi-ad9371-rx-os-dma@16c000 {
+	axi_ad9371_rx_os_dma_n4: axi-ad9371-rx-os-dma-n4@16c000 {
 		compatible = "adi,axi-dmac-1.00.a";
 		reg = <0x0016c000 0x00004000>;
 		interrupt-parent = <&intc>;
@@ -151,35 +152,36 @@
 		};
 	};
 
-	n4_axi_ad9371_rx: axi-ad9371-rx-hpc@170000 {
+	axi_ad9371_rx_n4: axi-ad9371-rx-hpc-n4@170000 {
 		compatible = "adi,axi-ad9371-rx-1.0";
 		reg = <0x00170000 0x00008000>;
-		dmas = <&n4_axi_ad9371_rx_dma 0>;
+		dmas = <&axi_ad9371_rx_dma_n4 0>;
 		dma-names = "rx";
-		spibus-connected = <&n4_trx0_ad9371>;
+		spibus-connected = <&trx0_ad9371_n4>;
 	};
 
-	n4_axi_ad9371_tx: axi-ad9371-tx-hpc@174000 {
+	axi_ad9371_tx_n4: axi-ad9371-tx-hpc-n4@174000 {
 		compatible = "adi,axi-ad9371-tx-1.0";
 		reg = <0x00174000 0x00004000>;
-		dmas = <&n4_axi_ad9371_tx_dma 0>;
+		dmas = <&axi_ad9371_tx_dma_n4 0>;
 		dma-names = "tx";
-		clocks = <&n4_trx0_ad9371 2>;
+		clocks = <&trx0_ad9371_n4 2>;
 		clock-names = "sampl_clk";
-		spibus-connected = <&n4_trx0_ad9371>;
+		spibus-connected = <&trx0_ad9371_n4>;
 		adi,axi-pl-fifo-enable;/* RxDMA fifo mode */
+		//adi,axi-pl-fifo-disable;
 	};
 
-	n4_xcvr_rx_os_core: axi-ad9371-rx-obs-hpc@178000 {
+	xcvr_rx_os_core_n4: axi-ad9371-rx-obs-hpc-n4@178000 {
 		compatible = "adi,axi-ad9371-obs-1.0";
 		reg = <0x00178000 0x00001000>;
-		dmas = <&n4_axi_ad9371_rx_os_dma 0>;
+		dmas = <&axi_ad9371_rx_os_dma_n4 0>;
 		dma-names = "rx";
-		clocks = <&n4_trx0_ad9371 1>;
+		clocks = <&trx0_ad9371_n4 1>;
 		clock-names = "sampl_clk";
 	};
 
-	n4_tx_device_clk_pll: altera-a10-fpll@145000 {
+	tx_device_clk_pll_n4: a10-fpll-tx-n4@145000 {
 		compatible = "altr,a10-fpll";
 		reg = <0x00145000 0x1000>;
 		clocks = <&clk0_ad9528 11>;
@@ -188,7 +190,7 @@
 		clock-output-names = "n4_jesd204_tx_link_clock";
 	};
 
-	n4_rx_device_clk_pll: altera-a10-fpll@155000 {
+	rx_device_clk_pll_n4: a10-fpll-rx-n4@155000 {
 		compatible = "altr,a10-fpll";
 		reg = <0x00155000 0x1000>;
 		clocks = <&clk0_ad9528 11>;
@@ -197,16 +199,16 @@
 		clock-output-names = "n4_jesd204_rx_link_clock";
 	};
 
-	n4_rx_os_device_clk_pll: altera-a10-fpll@165000 {
+	rx_os_device_clk_pll_n4: a10-fpll-rx-os-n4@165000 {
 		compatible = "altr,a10-fpll";
 		reg = <0x00165000 0x1000>;
 		clocks = <&clk0_ad9528 11>;
 
 		#clock-cells = <0>;
-		clock-output-names = "n4_jesd204_rx_os_link_clock";
+		clock-output-names = "jesd204_rx_os_link_clock_n4";
 	};
 
-	n4_fmc_spi: spi@120040 {
+	fmc_spi_n4: spi@120040 {
 		compatible = "altr,spi-1.0";
 		reg = <0x00120040 0x00000020>;
 		interrupt-parent = <&intc>;
@@ -216,8 +218,8 @@
 	};
 };
 
-&n4_fmc_spi {
-	n4_trx0_ad9371: ad9371-phy-n4@1 {
+&fmc_spi_n4 {
+	trx0_ad9371_n4: ad9371-phy-n4@1 {
 		#address-cells = <1>;
 		#size-cells = <0>;
 		#clock-cells = <1>;
@@ -240,9 +242,9 @@
 		//interrupts = <0 49 IRQ_TYPE_LEVEL_HIGH>;
 
 		/* Clocks */
-		clocks = <&n4_axi_ad9371_rx_jesd>, <&n4_axi_ad9371_tx_jesd>, <&n4_axi_ad9371_rx_os_jesd>, <&clk0_ad9528 8>, <&clk0_ad9528 11>;
+		clocks = <&axi_ad9371_rx_jesd_n4>, <&axi_ad9371_tx_jesd_n4>, <&axi_ad9371_rx_os_jesd_n4>, <&clk0_ad9528 8>, <&clk0_ad9528 11>;
 		clock-names = "jesd_rx_clk", "jesd_tx_clk", "jesd_rx_os_clk", "dev_clk", "fmc_clk";
-		clock-output-names = "n4_rx_sampl_clk", "n4_rx_os_sampl_clk", "n4_tx_sampl_clk";
+		clock-output-names = "rx_sampl_clk_n4", "rx_os_sampl_clk_n4", "tx_sampl_clk_n4";
 
 		adi,clocks-clk-pll-vco-freq_khz = <9830400>;
 		adi,clocks-device-clock_khz = <122880>;
@@ -288,5 +290,29 @@
 		adi,sniffer-profile-rx-bbf-3db-corner_khz = <100000>;
 		adi,sniffer-profile-rx-dec5-decimation = <5>;
 		adi,sniffer-profile-rx-fir-decimation = <4>;
+#if 0
+		/* Jacky:2018/07/25: enable pin-mode 
+		   https://wiki.analog.com/resources/tools-software/linux-drivers/iio-transceiver/ad9371-customization */
+		adi,arm-gpio-use-rx2-enable-pin = <1>;	// 0= RX1_ENABLE controls RX1&RX2, 1= separate RX1/RX2_ENABLE pins
+		adi,arm-gpio-use-tx2-enable-pin = <1>;	// 0= TX1_ENABLE controls TX1&TX2, 1= separate TX1/TX2_ENABLE pins
+		adi,arm-gpio-tx-rx-pin-mode = <1>;		// 0= ARM command mode, 1 = Pin mode to power up Tx/Rx chains
+		adi,arm-gpio-orx-pin-mode = <1>;		// 0= ARM command mode, 1 = Pin mode to power up ObsRx receiver
+		// to be tested: enable pin-mode but NOT enable gpio-ack
+		adi,arm-gpio-orx-trigger-pin = <0>;		// Select desired GPIO pin (valid 4-15)
+		adi,arm-gpio-orx-mode2-pin = <0>;		// Select desired GPIO pin (valid 0-18)
+		adi,arm-gpio-orx-mode1-pin = <0>;		// Select desired GPIO pin (valid 0-18)
+		adi,arm-gpio-orx-mode0-pin = <0>;		// Select desired GPIO pin (valid 0-18)
+		adi,arm-gpio-rx1-enable-ack = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-rx2-enable-ack = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-tx1-enable-ack = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-tx2-enable-ack = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-orx1-enable-ack = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-orx2-enable-ack = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-srx-enable-ack = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-tx-obs-select = <0>;		// Select desired GPIO pin (0-15), [4] = Output Enable.
+			// When 2 Tx are used with only 1 ORx input, this GPIO tells BBIC which Tx channel is active
+			// for calibrations, so BBIC can route correct RF Tx path into the single ORx input
+		adi,arm-gpio-enable-mask = <0>;
+#endif
 	};
 };
