--- a/arch/arm/boot/dts/adi-adrv9371.dtsi
+++ b/arch/arm/boot/dts/adi-adrv9371.dtsi
@@ -13,7 +13,10 @@
 		spi-max-frequency = <10000000>;
 		//adi,spi-3wire-enable;
 
-		clock-output-names = "ad9528-1_out0", "ad9528-1_out1", "ad9528-1_out2", "ad9528-1_out3", "ad9528-1_out4", "ad9528-1_out5", "ad9528-1_out6", "ad9528-1_out7", "ad9528-1_out8", "ad9528-1_out9", "ad9528-1_out10", "ad9528-1_out11", "ad9528-1_out12", "ad9528-1_out13";
+		clock-output-names = "ad9528-1_out0", "ad9528-1_out1", "ad9528-1_out2",
+			"ad9528-1_out3", "ad9528-1_out4", "ad9528-1_out5", "ad9528-1_out6",
+			"ad9528-1_out7", "ad9528-1_out8", "ad9528-1_out9", "ad9528-1_out10",
+			"ad9528-1_out11", "ad9528-1_out12", "ad9528-1_out13";
 		#clock-cells = <1>;
 
 		adi,vcxo-freq = <122880000>;
@@ -26,7 +29,6 @@
 		/* PLL1 config */
 		adi,pll1-feedback-div = <4>;
 		adi,pll1-charge-pump-current-nA = <5000>;
-
 
 		/* PLL2 config */
 		adi,pll2-vco-div-m1 = <3>; /* use 5 for 184320000 output device clock */
