rename a10ad9371facc*.dtsi facc-a10ad9371*.dtsi

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -697,8 +697,8 @@ dtb-$(CONFIG_ARCH_SOCFPGA) += \
 	socfpga_arria10_socdk_nand.dtb \
 	socfpga_arria10_socdk_qspi.dtb \
 	socfpga_arria10_socdk_sdmmc.dtb \
-	a10ad9371facc.dtb \
-	a10ad9371facc_dma.dtb \
+	facc-a10ad9371x2.dtb \
+	facc-a10ad9371x4dma.dtb \
 	socfpga_arria10_swvp.dtb \
 	socfpga_cyclone5_mcvevk.dtb \
 	socfpga_cyclone5_socdk.dtb \
