--- a/arch/arm/configs/facc_a10ad9371_defconfig
+++ b/arch/arm/configs/facc_a10ad9371_defconfig
@@ -46,7 +46,7 @@ CONFIG_CAN_DEBUG_DEVICES=y
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
-CONFIG_EXTRA_FIRMWARE="Mykonos_M3.bin"
+CONFIG_EXTRA_FIRMWARE="Mykonos_M3.bin TaliseStream.bin TaliseTDDArmFirmware.bin"
 CONFIG_MTD=y
 CONFIG_MTD_BLOCK=y
 CONFIG_MTD_M25P80=y
@@ -140,6 +140,7 @@ CONFIG_IIO_TRIGGER=y
 CONFIG_AD7291=y
 CONFIG_AD9361=y
 CONFIG_AD9371=y
+CONFIG_ADRV9009=y
 CONFIG_AD9467=y
 CONFIG_AD9680=y
 CONFIG_ADMC=y
@@ -174,9 +175,10 @@ CONFIG_NTFS_RW=y
 CONFIG_TMPFS=y
 CONFIG_JFFS2_FS=y
 CONFIG_NFS_FS=y
+CONFIG_NFS_V4=y
 CONFIG_ROOT_NFS=y
 CONFIG_NFSD=y
-CONFIG_NFSD_V3=y
+CONFIG_NFSD_V4=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_PRINTK_TIME=y
