--- a/drivers/iio/frequency/Kconfig
+++ b/drivers/iio/frequency/Kconfig
@@ -82,7 +82,7 @@ config CF_AXI_DDS
 	tristate "Analog Devices CoreFPGA AXI DDS driver"
 	depends on SPI
 	depends on COMMON_CLK
-	depends on IIO_BUFFER_DMAENGINE
+	select IIO_BUFFER_DMAENGINE
 	help
 	  Say yes here to build support for Analog Devices DDS chip
 	  AD9122, provides direct access via sysfs.
