--- a/drivers/misc/mathworks/Kconfig
+++ b/drivers/misc/mathworks/Kconfig
@@ -52,8 +52,8 @@ config MWIPCORE_IIO_STREAMING
 	tristate "MathWorks IIO Streaming Driver"
 	depends on DMADEVICES
 	depends on IIO
-	depends on IIO_BUFFER
-	depends on IIO_BUFFER_DMAENGINE
+	select IIO_BUFFER
+	select IIO_BUFFER_DMAENGINE
 	default m
 	help
 		Enable support for MathWorks IIO-based implementation of
